--- a/css/style.css
+++ b/css/style.css
@@ -620,10 +620,11 @@ h2 {
   max-width: 35rem;
 }
 .modal .close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
+  color: #fff;
+  font-size: 2.5rem;
 }
 .modal .close:hover,
 .modal .close:focus {
