--- a/scss/style.scss
+++ b/scss/style.scss
@@ -183,9 +183,9 @@
   /* The Close Button */
   .close {
     position: absolute;
-    top: .5rem;
+    top: 0.5rem;
     right: 1rem;
-    
+
     color: $c-white;
     font-size: 2.5rem;
   }
@@ -397,7 +397,7 @@
   }
 
   &__btn {
-    letter-spacing: 0.3rem;
+    letter-spacing: 0.1rem;
   }
 }
 
@@ -543,5 +543,16 @@
     top: 50%;
     left: 65%;
     transform: translate(-50%, -50%);
+  }
+}
+
+.iframe {
+  display: inline-block;
+
+  width: 100%;
+  // height: 40rem;
+
+  @include for-size(450px) {
+    height: 40rem;
   }
 }
